--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <br><br>
         <h2 data-aos="fade-up">Mathemania 2024</h2>
         <blockquote data-aos="fade-up" data-aos-delay="50">
-          <p>Mathemania 2024 is a 3-stage treasure hunt consisting of Math and Logical puzzles, organized by the Stamatics Society, the Mathematics and Statistics society of the Indian Institute of Technology, Kanpur. The event is designed for mathematics enthusiasts, offering a platform for participants to engage in challenging problem-solving related to mathematics and logic. The format may include stages or rounds with various mathematical and logical challenges.
+          <p>Mathemania 2024 is a 2-stage treasure hunt consisting of Math and Logical puzzles, organized by the Stamatics Society, the Mathematics and Statistics society of the Indian Institute of Technology, Kanpur. The event is designed for mathematics enthusiasts, offering a platform for participants to engage in challenging problem-solving related to mathematics and logic. The format may include stages or rounds with various mathematical and logical challenges.
             <br><br>
-          The theme of the event will be Star Wars. Have fun solving interesting problems as you make way across the vast emptiness of the galaxy in the shoes of a bounty hunter!
+            The theme of the event will be Squid Game. Prepare to face thrilling challenges as you navigate the high-stakes world of the games. Test your skills, strategy, and resilience as you compete for survival and the ultimate prize!
           </p>
         </blockquote>
       </div>
@@ -93,9 +93,9 @@
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
-        <div class ="podium">
+        <!--div class ="podium">
           <img src="podium.png" height=auto width="100%">
-        </div>
+        </div-->
 
         <div class="section-header">
           <h2>Information</h2>
@@ -107,7 +107,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div>
               <h4 class="title">Event Details</h4>
-              <p class="description"> <strong>The competition is over.<br></strong>
+              <p class="description"> <strong>The competition is yet to start.<br></strong>
               </p>
             </div>
           </div>
@@ -162,9 +162,8 @@
         <div>
           <h2>📅  Event Details</h2>
           <ul>
-            <li>⏲️ Round 1 will be held on 28th from 5:00 PM - 6:30 PM</li>
-            <li>⏲️ Round 2 will be held on 28th from 9:00 PM- 11:00 PM</li>
-            <li>⏲️ Round 3 will be held on 29th from 5:00 PM- 8:00 PM</li>
+            <li>⏲️ Round 1 will be held on 5th from 12:00 PM- 1:00 PM</li>
+            <li>⏲️ Round 2 will be held on 5th from 3:00 PM- 5:00 PM</li>
           </ul>
         </div>
         <br>
@@ -203,7 +202,7 @@
             </a>
             <p>We sincerely value your input and encourage you to share your thoughts with us. Whether you have suggestions or concerns, please feel free to reach out to us on discord, Facebook or Instagram.</p>
             <div class="social-links d-flex  mt-3">
-              <a href="https://discord.gg/URhTdxpn4G" class="discord"><i class="bi bi-discord"></i></a>
+              <a href="https://discord.gg/45CB8xFX6k" class="discord"><i class="bi bi-discord"></i></a>
               <a href="https://www.instagram.com/stamatics_iitk/" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/stamatics-iit-kanpur/" class="linkedin"><i class="bi bi-linkedin"></i></a>
               <a href="https://www.facebook.com/stamatics.iitk" class="facebook"><i class="bi bi-facebook"></i></a>
