--- a/services.html
+++ b/services.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Round 1 (over)</h4>
+                    <h4 class="card-title">Round 1 (Yet to start)</h4>
                   </div>
                 </div>
               </div>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Round 2 (over)</h4>
+                    <h4 class="card-title">Round 2 (Yet to start)</h4>
                   </div>
                 </div>
               </div>
@@ -149,7 +149,7 @@
             </a>
           </div><!-- End Card Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!--div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <a href="task3.html">
 
             <div class="card-item">
@@ -166,7 +166,7 @@
             </div>
             
             </a>
-          </div><!-- End Card Item -->
+          </div--><!-- End Card Item -->
 
         </div>
 
