--- a/leaderboard.html
+++ b/leaderboard.html
@@ -186,7 +186,7 @@
   {
     {
       // Your API KEY
-      const API_KEY = "AIzaSyDxcirEGm_0SNr1RS15iv2b-VacC8PK19g";
+      const API_KEY = "";
 
       function displayResult2(response) {
         let tableHead = "";
