--- a/task1.html
+++ b/task1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mathemania 2023</title>
+  <title>Mathemania 2024</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -86,12 +86,12 @@
     </section><!-- End Team Section -->
 
     <div class="pdfview">
-      <embed src="round1.pdf"  width=100% height=800px type="application/pdf">
+      <embed src=""  width=100% height=800px type="application/pdf">
         <br>          
     <object>
       <br>
       <h4>Having trouble reading the PDF?</h4>
-      <button><a href="round1.pdf">Download Instead</a></button>
+      <button><a href="">Download Instead</a></button>
     </object>
     
     <br><br>
