--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
               <h4 class="title"><a class=>Medium</a></h4>
               <p class="description">The event will be completely online. All rules for the event have been posted on the tasks page. <br><br>
               Join our discord for updates : <br>
-              <button><a href="https://discord.gg/SXRc9zJXhv">Discord</a></button><br>
+              <button><a href="https://discord.gg/45CB8xFX6k">Discord</a></button><br>
               Join our WhatsApp group : <br>
-              <button><a href="https://chat.whatsapp.com/KHKxlV38EpaDM8trj8RSvM">WhatsApp</a></button>
+              <button><a href="https://chat.whatsapp.com/Ck1HRDOmWVE9thi20uKu3i">WhatsApp</a></button>
             </p>
             </div>
           </div><!-- End Service Item -->
