--- a/services.html
+++ b/services.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Round 1 (Yet to start)</h4>
+                    <h4 class="card-title">Round 1</h4>
                   </div>
                 </div>
               </div>
