--- a/task1.html
+++ b/task1.html
@@ -86,12 +86,12 @@
     </section><!-- End Team Section -->
 
     <div class="pdfview">
-      <embed src=""  width=100% height=800px type="application/pdf">
+      <embed src="round1.pdf"  width=100% height=800px type="application/pdf">
         <br>          
     <object>
       <br>
       <h4>Having trouble reading the PDF?</h4>
-      <button><a href="">Download Instead</a></button>
+      <button><a href="round1.pdf">Download Instead</a></button>
     </object>
     
     <br><br>
