--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <h4>Additional links</h4>
             <p>
               <strong>Stamatics Site:</strong> <a href="https://stamatics.github.io/">https://stamatics.github.io/</a><br>
-              <strong>Email:</strong> <a href="stamaticsiitkanpur@gmail.com">stamaticsiitkanpur@gmail.com</a><br>  
+              <strong>Email:</strong> <a href="stamatics@iitk.ac.in">stamatics@iitk.ac.in</a><br>  
             </p>
 
           </div>
