--- a/leaderboard.html
+++ b/leaderboard.html
@@ -186,7 +186,7 @@
   {
     {
       // Your API KEY
-      const API_KEY = "";
+      const API_KEY = "AIzaSyCHNCql6vlW2sfSI6ZcaQXhjJ74WDNnHxY";
 
       function displayResult2(response) {
         let tableHead = "";
@@ -210,7 +210,7 @@
 
       function loadData() {
         // Spreadsheet ID
-        const spreadsheetId = "1dutNXgHX4PDqV6VRtjrSxpW7QcH6SxNYuLSgGald0rw";
+        const spreadsheetId = "1CMRPvp8UXvD7EQoxHVvLJooLXYbtQIIb7YSI6fb1Ob4";
         const range = "A:Z";
         getPublicValues({ spreadsheetId, range }, displayResult2);
       }
