--- a/services.html
+++ b/services.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Round 2 (Yet to start)</h4>
+                    <h4 class="card-title">Round 2</h4>
                   </div>
                 </div>
               </div>
@@ -210,7 +210,7 @@
             <h4>Additional links</h4>
             <p>
               <strong>Stamatics Site:</strong> <a href="https://stamatics.github.io/">https://stamatics.github.io/</a><br>
-              <strong>Email:</strong> <a href="stamaticsiitkanpur@gmail.com">stamaticsiitkanpur@gmail.com</a><br>  
+              <strong>Email:</strong> <a href="stamatics@iitk.ac.in">stamatics@iitk.ac.in</a><br>  
             </p>
 
           </div>
