--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mathemania 2023</title>
+  <title>Mathemania 2024</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -250,7 +250,7 @@
             <h4>Additional links</h4>
             <p>
               <strong>Stamatics Site:</strong> <a href="https://stamatics.github.io/">https://stamatics.github.io/</a><br>
-              <strong>Email:</strong> <a href="stamaticsiitkanpur@gmail.com">stamaticsiitkanpur@gmail.com</a><br>  
+              <strong>Email:</strong> <a href="stamatics@iitk.ac.in">stamatics@iitk.ac.in</a><br>  
             </p>
 
           </div>
