--- a/task2.html
+++ b/task2.html
@@ -87,12 +87,12 @@
     </section><!-- End Team Section -->
 
     <div class="pdfview">
-      <embed src=""  width=100% height=800px type="application/pdf">
+      <embed src="round2.pdf"  width=100% height=800px type="application/pdf">
         <br>          
     <object>
       <br>
       <h4>Having trouble reading the PDF?</h4>
-      <button><a href="">Download Instead</a></button>
+      <button><a href="round2.pdf">Download Instead</a></button>
     </object>
     
     <br><br>
@@ -140,7 +140,7 @@
             <h4>Additional links</h4>
             <p>
               <strong>Stamatics Site:</strong> <a href="https://stamatics.github.io/">https://stamatics.github.io/</a><br>
-              <strong>Email:</strong> <a href="stamaticsiitkanpur@gmail.com">stamaticsiitkanpur@gmail.com</a><br>  
+              <strong>Email:</strong> <a href="stamatics@iitk.ac.in">stamatics@iitk.ac.in</a><br>  
             </p>
 
           </div>
