--- a/leaderboard.html
+++ b/leaderboard.html
@@ -16,7 +16,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -27,17 +27,11 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
-/>
-<!-- Google Fonts Roboto -->
-<link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-/>
-<!-- MDB UI KIT -->
-<!-- <link rel="stylesheet" href="css/mdb.min.css" /> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
+  <!-- Google Fonts Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
+  <!-- MDB UI KIT -->
+  <!-- <link rel="stylesheet" href="css/mdb.min.css" /> -->
 
 </head>
 
@@ -45,16 +39,14 @@
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-        <a class="navbar-brand stamatics-logo" href="index.html">
-            <div>
-                <img class="img-fluid" src="assets/img/logo.png" alt="Stamatics IITK Logo">
-            </div>
-        </a>
-        <a href="index.html" class="logo d-flex align-items-center">
-            <!-- Uncomment the line below if you also wish to use an image logo -->
-            <!-- <img src="assets/img/logo.png" alt=""> -->
-            <h1 class="d-flex align-items-center">Stamatics IITK</h1>
-        </a>
+      <a class="navbar-brand stamatics-logo" href="index.html">
+        <div>
+          <img class="img-fluid" src="assets/img/logo.png" alt="Stamatics IITK Logo">
+        </div>
+      </a>
+      <a href="index.html" class="logo d-flex align-items-center">
+        <h1 class="d-flex align-items-center">Stamatics IITK</h1>
+      </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -70,51 +62,124 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
-
     </div>
   </header><!-- End Header -->
 
   <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/cover.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center">
-
         <h2>Leaderboard</h2>
         <ol>
           <li><a href="index.html">Home</a></li>
           <li>Leaderboard</li>
         </ol>
-
       </div>
-    </div><!-- End Breadcrumbs -->
+    </div>
     <br>
-    <!-- ======= About Section ======= -->
     <section id="service-item" class="service-item">
       <div class="container" data-aos="fade-up">
         <div>
           <section id="information">
-            <!--Main layout-->
-              <div class="information">
-                <!-- Table -->
-                <table class="table">
-                  <thead id="table-head"></thead>
-                  <tbody id="table-body"></tbody>
-                </table>
-                <!-- Table -->
-              </div>
-            <!--Main layout-->
+            <table>
+              <thead id="table-head">
+                <tr>
+                  <th>S.No</th>
+                  <th>TEAM NAME</th>
+                  <th>TOTAL</th>
+                </tr>
+              </thead>
+              <tbody id="table-body">
+                <tr><td>1</td><td>Cordi</td><td>1,000.00</td></tr>
+                <tr><td>2</td><td>Runtime3rror</td><td>800.00</td></tr>
+                <tr><td>3</td><td>Theorem Titans</td><td>700.00</td></tr>
+                <tr><td>4</td><td>I_HATE_MATHS</td><td>650.00</td></tr>
+                <tr><td>5</td><td>P.R.O.S.</td><td>600.00</td></tr>
+                <tr><td>6</td><td>MPM</td><td>550.00</td></tr>
+                <tr><td>7</td><td>USSR</td><td>550.00</td></tr>
+                <tr><td>8</td><td>Aviators</td><td>550.00</td></tr>
+                <tr><td>9</td><td>DmEb</td><td>550.00</td></tr>
+                <tr><td>10</td><td>I_HATE_MATHS</td><td>550.00</td></tr>
+                <tr><td>11</td><td>Calcoholics</td><td>550.00</td></tr>
+                <tr><td>12</td><td>Incredibles</td><td>500.00</td></tr>
+                <tr><td>13</td><td>Golden Snitch</td><td>500.00</td></tr>
+                <tr><td>14</td><td>e = pi = 7</td><td>500.00</td></tr>
+                <tr><td>15</td><td>Math guys</td><td>450.00</td></tr>
+                <tr><td>16</td><td>Math Masters</td><td>450.00</td></tr>
+                <tr><td>17</td><td>Mehta Brothers</td><td>450.00</td></tr>
+                <tr><td>18</td><td>Didn't fill</td><td>450.00</td></tr>
+                <tr><td>19</td><td>MathManiaWinners</td><td>450.00</td></tr>
+                <tr><td>20</td><td>Poorav and Pooravansh Tiwari</td><td>400.00</td></tr>
+                <tr><td>21</td><td>Ultimate Masters</td><td>400.00</td></tr>
+                <tr><td>22</td><td>E5 Enigmas</td><td>400.00</td></tr>
+                <tr><td>23</td><td>Shadow Fighters</td><td>400.00</td></tr>
+                <tr><td>24</td><td>Team Tirumala</td><td>400.00</td></tr>
+                <tr><td>25</td><td>Metallatics</td><td>400.00</td></tr>
+                <tr><td>26</td><td>Internal(Internal)</td><td>400.00</td></tr>
+                <tr><td>27</td><td>Dontgivef(x)</td><td>350.00</td></tr>
+                <tr><td>28</td><td>e3 maths masters</td><td>350.00</td></tr>
+                <tr><td>29</td><td>vision</td><td>350.00</td></tr>
+                <tr><td>30</td><td>Ganit Ke Saanp</td><td>350.00</td></tr>
+                <tr><td>31</td><td>Err</td><td>350.00</td></tr>
+                <tr><td>32</td><td>The Radical Solutions</td><td>300.00</td></tr>
+                <tr><td>33</td><td>epsilon fans</td><td>300.00</td></tr>
+                <tr><td>34</td><td>Dexter</td><td>300.00</td></tr>
+                <tr><td>35</td><td>Bakchod 5</td><td>300.00</td></tr>
+                <tr><td>36</td><td>Antimony</td><td>250.00</td></tr>
+                <tr><td>37</td><td>TrueTrain</td><td>250.00</td></tr>
+                <tr><td>38</td><td>PranavNRiddhi</td><td>250.00</td></tr>
+                <tr><td>39</td><td>JIMB(altr)O</td><td>250.00</td></tr>
+                <tr><td>40</td><td>Math Freaks</td><td>250.00</td></tr>
+                <tr><td>41</td><td>Mathbuzz</td><td>250.00</td></tr>
+                <tr><td>42</td><td>Xyz</td><td>250.00</td></tr>
+                <tr><td>43</td><td>Dexter</td><td>250.00</td></tr>
+                <tr><td>44</td><td>Gryffindors</td><td>200.00</td></tr>
+                <tr><td>45</td><td>Constant Variable</td><td>200.00</td></tr>
+                <tr><td>46</td><td>Ciphers</td><td>200.00</td></tr>
+                <tr><td>47</td><td>Solvers</td><td>200.00</td></tr>
+                <tr><td>48</td><td>Philomaths</td><td>150.00</td></tr>
+                <tr><td>49</td><td>Checkmate</td><td>150.00</td></tr>
+                <tr><td>50</td><td>Mathwizzers</td><td>150.00</td></tr>
+                <tr><td>51</td><td>Arpan and Pushkar</td><td>150.00</td></tr>
+                <tr><td>52</td><td>The Aimers</td><td>150.00</td></tr>
+                <tr><td>53</td><td>iit delhi</td><td>150.00</td></tr>
+                <tr><td>54</td><td>Golden Ratios</td><td>100.00</td></tr>
+                <tr><td>55</td><td>War</td><td>100.00</td></tr>
+                <tr><td>56</td><td>Adeeba and Megha</td><td>100.00</td></tr>
+                <tr><td>57</td><td>E6 mathematician brothers</td><td>100.00</td></tr>
+                <tr><td>58</td><td>Orzers</td><td>100.00</td></tr>
+                <tr><td>59</td><td>Perpendiculars</td><td>100.00</td></tr>
+                <tr><td>60</td><td>Bhagri</td><td>100.00</td></tr>
+                <tr><td>61</td><td>Team Alpha</td><td>100.00</td></tr>
+                <tr><td>62</td><td>smg</td><td>50.00</td></tr>
+                <tr><td>63</td><td>EkBaarDilade</td><td>50.00</td></tr>
+                <tr><td>64</td><td>Smg</td><td>50.00</td></tr>
+                <tr><td>65</td><td>hehehsjja</td><td>50.00</td></tr>
+                <tr><td>66</td><td>dumb, dumber & dumbest</td><td>50.00</td></tr>
+                <tr><td>67</td><td>imagine qualifying</td><td>0.00</td></tr>
+                <tr><td>68</td><td>FAST AND CURIOUS</td><td>0.00</td></tr>
+                <tr><td>69</td><td>Mathematics</td><td>0.00</td></tr>
+                <tr><td>70</td><td>qwerty_maths</td><td>0.00</td></tr>
+                <tr><td>71</td><td>Mutthi ki shakti</td><td>0.00</td></tr>
+                <tr><td>72</td><td>anonymous</td><td>-50.00</td></tr>
+                <tr><td>73</td><td>The Mathslover</td><td>-50.00</td></tr>
+                <tr><td>74</td><td>akash rathi</td><td>-100.00</td></tr>
+                <tr><td>75</td><td>PiWarriors</td><td>-100.00</td></tr>
+                <tr><td>76</td><td>Mental Mathemagicians</td><td>-100.00</td></tr>
+                <tr><td>77</td><td>WOWers</td><td>-150.00</td></tr>
+                <tr><td>78</td><td>Tulika and tanvi</td><td>-200.00</td></tr>
+                <tr><td>79</td><td>Boolean Knights</td><td>-200.00</td></tr>
+                <tr><td>80</td><td>Digital Defenders</td><td>-450.00</td></tr>
+                <tr><td>81</td><td>Yashidi balle balle</td><td>-600.00</td></tr>
+              </tbody>
+            </table>
           </section>
         </div>
       </div>
-
-
-    </section><!-- End About Section -->
-  </main><!-- End #main -->
+    </section>
+  </main>
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-
     <div class="footer-content">
       <div class="container">
         <div class="row gy-4">
@@ -123,40 +188,17 @@
               <span>Reach Out To Us</span>
             </a>
             <p>We sincerely value your input and encourage you to share your thoughts with us. Whether you have suggestions or concerns, please feel free to reach out to us on discord, Facebook or Instagram.</p>
-            <div class="social-links d-flex  mt-3">
+            <div class="social-links d-flex mt-3">
               <a href="https://discord.gg/URhTdxpn4G" class="discord"><i class="bi bi-discord"></i></a>
               <a href="https://www.instagram.com/stamatics_iitk/" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/stamatics-iit-kanpur/" class="linkedin"><i class="bi bi-linkedin"></i></a>
               <a href="https://www.facebook.com/stamatics.iitk" class="facebook"><i class="bi bi-facebook"></i></a>
             </div>
           </div>
-
-          <div class="col-lg-2 col-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bi bi-dash"></i> <a href="file:///C:/Users/Jiyanshu%20Dhaka/Desktop/Nova/index.html">Home</a></li>
-              <li><i class="bi bi-dash"></i> <a href="file:///C:/Users/Jiyanshu%20Dhaka/Desktop/Nova/about.html">About us</a></li>
-              <li><i class="bi bi-dash"></i> <a href="file:///C:/Users/Jiyanshu%20Dhaka/Desktop/Nova/services.html">Services</a></li>
-              <li><i class="bi bi-dash"></i> <a href="file:///C:/Users/Jiyanshu%20Dhaka/Desktop/Nova/portfolio.html">Terms of service</a></li>
-              <li><i class="bi bi-dash"></i> <a href="file:///C:/Users/Jiyanshu%20Dhaka/Desktop/Nova/team.html">Team</a></li>
-              <li><i class="bi bi-dash"></i> <a href="file:///C:/Users/Jiyanshu%20Dhaka/Desktop/Nova/blog.html">Blog</a></li>
-              <li><i class="bi bi-dash"></i> <a href="file:///C:/Users/Jiyanshu%20Dhaka/Desktop/Nova/team.html">Contact</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h4>Additional links</h4>
-            <p>
-              <strong>Stamatics Site:</strong> <a href="https://stamatics.github.io/">https://stamatics.github.io/</a><br>
-              <strong>Email:</strong> <a href="stamaticsiitkanpur@gmail.com">stamaticsiitkanpur@gmail.com</a><br>  
-            </p>
-
-          </div>
-
         </div>
       </div>
     </div>
-  </footer><!-- End Footer --><!-- End Footer -->
+  </footer><!-- End Footer -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
@@ -172,58 +214,56 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
-</body>
+  <!-- MDB ESSENTIAL -->
+  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <!-- Google API -->
+  <script src="https://apis.google.com/js/api.js"></script>
+  <!-- easyData -->
+  <script type="text/javascript" src="js/easyData-google-sheets.js"></script>
 
-<!-- MDB ESSENTIAL -->
-<script type="text/javascript" src="js/mdb.min.js"></script>
-<!-- Google API -->
-<script src="https://apis.google.com/js/api.js"></script>
-<!-- easyData -->
-<script type="text/javascript" src="js/easyData-google-sheets.js"></script>
-
-<!-- easyData - Creating table -->
-<script>
-  {
+  <!-- easyData - Creating table -->
+  <script>
     {
-      // Your API KEY
-      const API_KEY = "AIzaSyCHNCql6vlW2sfSI6ZcaQXhjJ74WDNnHxY";
+      {
+        // Your API KEY
+        const API_KEY = "YOUR_API_KEY_HERE";
 
-      function displayResult2(response) {
-        let tableHead = "";
-        let tableBody = "";
+        function displayResult2(response) {
+          let tableHead = "";
+          let tableBody = "";
 
-        response.result.values.forEach((row, index) => {
-          if (index === 0) {
-            tableHead += "<tr>";
-            row.forEach((val) => (tableHead += "<th>" + val + "</th>"));
-            tableHead += "</tr>";
-          } else {
-            tableBody += "<tr>";
-            row.forEach((val) => (tableBody += "<td>" + val + "</td>"));
-            tableBody += "</tr>";
-          }
+          response.result.values.forEach((row, index) => {
+            if (index === 0) {
+              tableHead += "<tr>";
+              row.forEach((val) => (tableHead += "<th>" + val + "</th>"));
+              tableHead += "</tr>";
+            } else {
+              tableBody += "<tr>";
+              row.forEach((val) => (tableBody += "<td>" + val + "</td>"));
+              tableBody += "</tr>";
+            }
+          });
+
+          document.getElementById("table-head").innerHTML = tableHead;
+          document.getElementById("table-body").innerHTML = tableBody;
+        }
+
+        function loadData() {
+          // Spreadsheet ID
+          const spreadsheetId = "YOUR_SPREADSHEET_ID_HERE";
+          const range = "A:Z";
+          getPublicValues({ spreadsheetId, range }, displayResult2);
+        }
+
+        window.addEventListener("load", (e) => {
+          initOAuthClient({ apiKey: API_KEY });
         });
 
-        document.getElementById("table-head").innerHTML = tableHead;
-        document.getElementById("table-body").innerHTML = tableBody;
+        document.addEventListener("gapi-loaded", (e) => {
+          loadData();
+        });
       }
-
-      function loadData() {
-        // Spreadsheet ID
-        const spreadsheetId = "1CMRPvp8UXvD7EQoxHVvLJooLXYbtQIIb7YSI6fb1Ob4";
-        const range = "A:Z";
-        getPublicValues({ spreadsheetId, range }, displayResult2);
-      }
-
-      window.addEventListener("load", (e) => {
-        initOAuthClient({ apiKey: API_KEY });
-      });
-
-      document.addEventListener("gapi-loaded", (e) => {
-        loadData();
-      });
     }
-  }
-</script>
-
+  </script>
+</body>
 </html>
