Final mathemania commit

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
-        <!--div class ="podium">
-          <img src="podium.png" height=auto width="100%">
-        </div-->
+        <div class ="podium">
+          <img src="podium.jpeg" height=auto width="100%">
+        </div>
 
         <div class="section-header">
           <h2>Information</h2>
