--- a/leaderboard.html
+++ b/leaderboard.html
@@ -16,7 +16,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700&display=swap" rel="stylesheet">
 
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -40,28 +40,16 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a class="navbar-brand stamatics-logo" href="index.html">
-        <div>
-          <img class="img-fluid" src="assets/img/logo.png" alt="Stamatics IITK Logo">
-        </div>
+
       </a>
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="d-flex align-items-center">Stamatics IITK</h1>
+
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Tasks</a></li>
-          <li><a href="portfolio.html">Gallery</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="leaderboard.html">Leaderboard</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav><!-- .navbar -->
+
     </div>
   </header><!-- End Header -->
 
@@ -83,93 +71,44 @@
             <table>
               <thead id="table-head">
                 <tr>
-                  <th>S.No</th>
+                  <th>#</th>
                   <th>TEAM NAME</th>
-                  <th>TOTAL</th>
+                  <th>Round1</th>
+                  <th>Round2</th>
                 </tr>
               </thead>
               <tbody id="table-body">
-                <tr><td>1</td><td>Cordi</td><td>1,000.00</td></tr>
-                <tr><td>2</td><td>Runtime3rror</td><td>800.00</td></tr>
-                <tr><td>3</td><td>Theorem Titans</td><td>700.00</td></tr>
-                <tr><td>4</td><td>I_HATE_MATHS</td><td>650.00</td></tr>
-                <tr><td>5</td><td>P.R.O.S.</td><td>600.00</td></tr>
-                <tr><td>6</td><td>MPM</td><td>550.00</td></tr>
-                <tr><td>7</td><td>USSR</td><td>550.00</td></tr>
-                <tr><td>8</td><td>Aviators</td><td>550.00</td></tr>
-                <tr><td>9</td><td>DmEb</td><td>550.00</td></tr>
-                <tr><td>10</td><td>I_HATE_MATHS</td><td>550.00</td></tr>
-                <tr><td>11</td><td>Calcoholics</td><td>550.00</td></tr>
-                <tr><td>12</td><td>Incredibles</td><td>500.00</td></tr>
-                <tr><td>13</td><td>Golden Snitch</td><td>500.00</td></tr>
-                <tr><td>14</td><td>e = pi = 7</td><td>500.00</td></tr>
-                <tr><td>15</td><td>Math guys</td><td>450.00</td></tr>
-                <tr><td>16</td><td>Math Masters</td><td>450.00</td></tr>
-                <tr><td>17</td><td>Mehta Brothers</td><td>450.00</td></tr>
-                <tr><td>18</td><td>Didn't fill</td><td>450.00</td></tr>
-                <tr><td>19</td><td>MathManiaWinners</td><td>450.00</td></tr>
-                <tr><td>20</td><td>Poorav and Pooravansh Tiwari</td><td>400.00</td></tr>
-                <tr><td>21</td><td>Ultimate Masters</td><td>400.00</td></tr>
-                <tr><td>22</td><td>E5 Enigmas</td><td>400.00</td></tr>
-                <tr><td>23</td><td>Shadow Fighters</td><td>400.00</td></tr>
-                <tr><td>24</td><td>Team Tirumala</td><td>400.00</td></tr>
-                <tr><td>25</td><td>Metallatics</td><td>400.00</td></tr>
-                <tr><td>26</td><td>Internal(Internal)</td><td>400.00</td></tr>
-                <tr><td>27</td><td>Dontgivef(x)</td><td>350.00</td></tr>
-                <tr><td>28</td><td>e3 maths masters</td><td>350.00</td></tr>
-                <tr><td>29</td><td>vision</td><td>350.00</td></tr>
-                <tr><td>30</td><td>Ganit Ke Saanp</td><td>350.00</td></tr>
-                <tr><td>31</td><td>Err</td><td>350.00</td></tr>
-                <tr><td>32</td><td>The Radical Solutions</td><td>300.00</td></tr>
-                <tr><td>33</td><td>epsilon fans</td><td>300.00</td></tr>
-                <tr><td>34</td><td>Dexter</td><td>300.00</td></tr>
-                <tr><td>35</td><td>Bakchod 5</td><td>300.00</td></tr>
-                <tr><td>36</td><td>Antimony</td><td>250.00</td></tr>
-                <tr><td>37</td><td>TrueTrain</td><td>250.00</td></tr>
-                <tr><td>38</td><td>PranavNRiddhi</td><td>250.00</td></tr>
-                <tr><td>39</td><td>JIMB(altr)O</td><td>250.00</td></tr>
-                <tr><td>40</td><td>Math Freaks</td><td>250.00</td></tr>
-                <tr><td>41</td><td>Mathbuzz</td><td>250.00</td></tr>
-                <tr><td>42</td><td>Xyz</td><td>250.00</td></tr>
-                <tr><td>43</td><td>Dexter</td><td>250.00</td></tr>
-                <tr><td>44</td><td>Gryffindors</td><td>200.00</td></tr>
-                <tr><td>45</td><td>Constant Variable</td><td>200.00</td></tr>
-                <tr><td>46</td><td>Ciphers</td><td>200.00</td></tr>
-                <tr><td>47</td><td>Solvers</td><td>200.00</td></tr>
-                <tr><td>48</td><td>Philomaths</td><td>150.00</td></tr>
-                <tr><td>49</td><td>Checkmate</td><td>150.00</td></tr>
-                <tr><td>50</td><td>Mathwizzers</td><td>150.00</td></tr>
-                <tr><td>51</td><td>Arpan and Pushkar</td><td>150.00</td></tr>
-                <tr><td>52</td><td>The Aimers</td><td>150.00</td></tr>
-                <tr><td>53</td><td>iit delhi</td><td>150.00</td></tr>
-                <tr><td>54</td><td>Golden Ratios</td><td>100.00</td></tr>
-                <tr><td>55</td><td>War</td><td>100.00</td></tr>
-                <tr><td>56</td><td>Adeeba and Megha</td><td>100.00</td></tr>
-                <tr><td>57</td><td>E6 mathematician brothers</td><td>100.00</td></tr>
-                <tr><td>58</td><td>Orzers</td><td>100.00</td></tr>
-                <tr><td>59</td><td>Perpendiculars</td><td>100.00</td></tr>
-                <tr><td>60</td><td>Bhagri</td><td>100.00</td></tr>
-                <tr><td>61</td><td>Team Alpha</td><td>100.00</td></tr>
-                <tr><td>62</td><td>smg</td><td>50.00</td></tr>
-                <tr><td>63</td><td>EkBaarDilade</td><td>50.00</td></tr>
-                <tr><td>64</td><td>Smg</td><td>50.00</td></tr>
-                <tr><td>65</td><td>hehehsjja</td><td>50.00</td></tr>
-                <tr><td>66</td><td>dumb, dumber & dumbest</td><td>50.00</td></tr>
-                <tr><td>67</td><td>imagine qualifying</td><td>0.00</td></tr>
-                <tr><td>68</td><td>FAST AND CURIOUS</td><td>0.00</td></tr>
-                <tr><td>69</td><td>Mathematics</td><td>0.00</td></tr>
-                <tr><td>70</td><td>qwerty_maths</td><td>0.00</td></tr>
-                <tr><td>71</td><td>Mutthi ki shakti</td><td>0.00</td></tr>
-                <tr><td>72</td><td>anonymous</td><td>-50.00</td></tr>
-                <tr><td>73</td><td>The Mathslover</td><td>-50.00</td></tr>
-                <tr><td>74</td><td>akash rathi</td><td>-100.00</td></tr>
-                <tr><td>75</td><td>PiWarriors</td><td>-100.00</td></tr>
-                <tr><td>76</td><td>Mental Mathemagicians</td><td>-100.00</td></tr>
-                <tr><td>77</td><td>WOWers</td><td>-150.00</td></tr>
-                <tr><td>78</td><td>Tulika and tanvi</td><td>-200.00</td></tr>
-                <tr><td>79</td><td>Boolean Knights</td><td>-200.00</td></tr>
-                <tr><td>80</td><td>Digital Defenders</td><td>-450.00</td></tr>
-                <tr><td>81</td><td>Yashidi balle balle</td><td>-600.00</td></tr>
+                
+                <tr><td>1</td><td>Calcoholics</td><td>550</td><td>580</td></tr>
+                <tr><td>2</td><td>e = pi = 7</td><td>500</td><td>580</td></tr>
+                <tr><td>3</td><td>Mehta Brothers</td><td>450</td><td>575</td></tr>
+                <tr><td>4</td><td>Math guys</td><td>450</td><td>505</td></tr>
+                <tr><td>5</td><td>Ultimate Masters</td><td>400</td><td>445</td></tr>
+                <tr><td>6</td><td>Internal(Internal)</td><td>400</td><td>390</td></tr>
+                <tr><td>7</td><td>Ganit Ke Saanp</td><td>350</td><td>380</td></tr>
+                <tr><td>8</td><td>e3 maths masters</td><td>350</td><td>380</td></tr>
+                <tr><td>9</td><td>Runtime3rror</td><td>800</td><td>360</td></tr>
+                <tr><td>10</td><td>Golden Snitch</td><td>500</td><td>360</td></tr>
+                <tr><td>11</td><td>Math Masters</td><td>450</td><td>340</td></tr>
+                <tr><td>12</td><td>I_HATE_MATHS</td><td>650</td><td>320</td></tr>
+                <tr><td>13</td><td>Dontgivef(x)</td><td>350</td><td>320</td></tr>
+                <tr><td>14</td><td>Theorem Titans</td><td>700</td><td>310</td></tr>
+                <tr><td>15</td><td>vision</td><td>350</td><td>270</td></tr>
+                <tr><td>16</td><td>E5 Enigmas</td><td>400</td><td>255</td></tr>
+                <tr><td>17</td><td>MPM</td><td>550</td><td>245</td></tr>
+                <tr><td>18</td><td>Metallatics</td><td>400</td><td>240</td></tr>
+                <tr><td>19</td><td>USSR</td><td>550</td><td>230</td></tr>
+                <tr><td>20</td><td>Dexter</td><td>300</td><td>225</td></tr>
+                <tr><td>21</td><td>Incredibles</td><td>500</td><td>220</td></tr>
+                <tr><td>22</td><td>MathManiaWinners</td><td>450</td><td>210</td></tr>
+                <tr><td>23</td><td>Didn't fill</td><td>450</td><td>190</td></tr>
+                <tr><td>24</td><td>Team Tirumala</td><td>400</td><td>130</td></tr>
+                <tr><td>25</td><td>Err</td><td>350</td><td>105</td></tr>
+                <tr><td>26</td><td>Bakchod 5</td><td>300</td><td>100</td></tr>
+                <tr><td>27</td><td>The Radical Solutions</td><td>300</td><td>75</td></tr>
+                <tr><td>28</td><td>epsilon fans</td><td>300</td><td>50</td></tr>
+                <tr><td>29</td><td>Shadow Fighters</td><td>400</td><td>0</td></tr>
+                <tr><td>30</td><td>Poorav and Pooravansh Tiwari</td><td>400</td><td>0</td></tr>
               </tbody>
             </table>
           </section>
@@ -181,22 +120,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="footer-content">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-5 col-md-12 footer-info">
-            <a href="index.html" class="logo d-flex align-items-center">
-              <span>Reach Out To Us</span>
-            </a>
-            <p>We sincerely value your input and encourage you to share your thoughts with us. Whether you have suggestions or concerns, please feel free to reach out to us on discord, Facebook or Instagram.</p>
-            <div class="social-links d-flex mt-3">
-              <a href="https://discord.gg/URhTdxpn4G" class="discord"><i class="bi bi-discord"></i></a>
-              <a href="https://www.instagram.com/stamatics_iitk/" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="https://www.linkedin.com/company/stamatics-iit-kanpur/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-              <a href="https://www.facebook.com/stamatics.iitk" class="facebook"><i class="bi bi-facebook"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
+
     </div>
   </footer><!-- End Footer -->
 
